--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "@splinetool/react-spline": "^4.0.0",
     "axios": "^1.7.2",
     "react": "^18.3.1",
