--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.1",
     "sass": "^1.77.8"
   },
