--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@dnd-kit/core": "^6.1.0",
     "@splinetool/react-spline": "^4.0.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-modal": "^3.16.1",
