--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-draggable": "^4.4.6",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.1",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "spline": "^0.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
