--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.15",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "react": "^18.3.1",
